--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,13 +6,16 @@
 </head>
 <body>
 <h3>Add User</h3>
-<!--we use th:error tag inside the span elements below to print the error message we defined for each attribute validation in the User class, if there will be any error. For example, if the name is blank, the message defined in the @NotBlank annotation above "name" attribute in the user class will be displayed, which is "username cannot be empty"-->
+
 <form action="addUser" method="post">
-    Username: <input type="text" name="name" />
     <span th:errors="${user.name}" style="color:red"></span><br />
-    Password: <input type="password" name="password"/><br />
+    Username: <input type="text" name="name" /><br />
     <span th:errors="${user.password}" style="color:red"></span><br />
+    Password: <input type="password" name="password"/><br />
+    <span th:errors="${user.grade}" style="color:red"></span><br />
     Grade: <input type="text" name="grade" /><br />
+    <span th:errors="${user.email}" style="color:red"></span><br />
+    Email: <input type="text" name="email" /><br />
     <input type="submit" value="Add" >
 </form>
 </body>
